# simplelog

./: .clang-format  CMakeLists.txt  README.md  simple_log.hpp
tests/: CMakeLists.txt  extreme_test.cpp  test.cpp
tests/lib/: lib_test.cpp  lib_test.h
